--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/src/backImg/quiz.png);
+  background-image: url(/src/background-image/quiz.png);
   background-size: contain;
   font-family: system-ui, '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 
   'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
